# ood_persistence

./: CHANGELOG.md  Cargo.toml  README.md
examples/: README.md  simple.rs  transaction.rs
examples/web/: .env.example  Cargo.toml  Makefile.toml  Migra.toml  README.md  docker-compose.dev.yml
examples/web/database/: schema.sql
examples/web/src/: config.rs  error.rs  lib.rs  main.rs
examples/web/src/app/list/: _mocks.rs  controller.rs  mod.rs  service.rs  storage_type.rs
examples/web/src/db/: mod.rs  persistence.rs
examples/web/src/db/list/: mod.rs  storage.rs
examples/web/src/rest/: context.rs  mod.rs  prelude.rs  server.rs  server_utils.rs  types.rs
examples/web/src/rest/routes/: mod.rs  root.rs
examples/web/src/rest/routes/api/: list.rs  mod.rs
src/: asyn.rs  bb8_postgres.rs  error.rs  lib.rs  r2d2_mysql.rs  r2d2_postgres.rs  r2d2_sqlite.rs  syn.rs
