[package]
name = "web_example"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
# configuration
log = "0.4"
env_logger = "0.7"
itconfig = { version = "1.1", features = ["macro"] }
lazy_static = "1.4"
# for local development
dotenv = { version = "0.15", optional = true }
async-trait = "0.1"

# database
ood_persistence = { path = "../../", features = ["nightly", "bb8_postgres"] }
postgres-types = { version = "0.2", features = ["derive"] }

# runtime
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "signal"] }

# server
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
dev = ["dotenv"]
